# python-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  coverage.yml
scripts/: __init__.py  dev_register.py  setup_hooks.py  verify_dev.py
src/python_template/: __init__.py  config.py  log.py  logging.py  main.py
tests/: conftest.py  test_config.py  test_dev_register.py  test_log.py  test_main.py
